Fixes flaky tests
{patch}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>